@@ -1,6 +1,7 @@
 Revision history for Test-Deep-DateTime-RFC3339
 
 {{$NEXT}}
+        - Better tests of failure diagnostics
 
 0.03  2014-07-24 15:17:12 PDT
         - Minor POD fix for link
